# chessgram

./: .gitignore  Dockerfile  pyproject.toml
chessgram/: __main__.py  bot.py  game.py  user_cache.py  utils.py
scripts/: containers.sh
